--- a/appsettings.json
+++ b/appsettings.json
@@ -14,6 +14,7 @@
             }
         }
     },
+    "Environment": "dev",
 	"Port": 5050,
 	"PublicUrl": "",
     "Content": "Content/content/",
