--- a/Api.csproj
+++ b/Api.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.ClearScript.V8.Native.linux-x64" Version="7.1.0" />
     <PackageReference Include="Microsoft.ClearScript.V8.Native.osx-x64" Version="7.1.0" />
     <PackageReference Include="Microsoft.ClearScript.V8.Native.win-x64" Version="7.1.0" />
+    <PackageReference Include="Microsoft.ClearScript.V8.Native.win-x86" Version="7.1.0" />
     <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     <PackageReference Include="Karambolo.PO.Compact" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
