--- a/appsettings.json
+++ b/appsettings.json
@@ -1,28 +1,8 @@
-﻿{
+{
     "ConnectionStrings": {
         "DefaultConnection": ""
     },
-    "Email": {
-        "Accounts": {
-            "default": {
-                "Server": "",
-                "FromAddress": "",
-                "User": "",
-                "Password": "",
-                "Port": 587,
-                "Encrypted": true
-            }
-        }
-    },
     "Environment": "dev",
 	"Port": 5050,
-	"PublicUrl": "",
-    "Content": "Content/content/",
-    "ContentPrivate": "Content/content-private/",
-    "Logging": {
-        "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    }
+	"PublicUrl": ""
 }
