Update package.json to fix UI/ to API/

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"dependencies":[
-		"UI/PaymentGateways",
-		"UI/Products",
-		"UI/PurchaseProducts",
-		"UI/Purchases"
+		"API/PaymentGateways",
+		"API/Products",
+		"API/PurchaseProducts",
+		"API/Purchases"
 	]
 }
